--- a/Tyran/index.html
+++ b/Tyran/index.html
@@ -53,6 +53,11 @@
       body {
         margin-top: 50px;
       }
+
+      .Credits{
+        font-family: Consolas;
+        color: grey;
+      }
     </style>
   </head>
   <body>
@@ -75,6 +80,11 @@
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
+
+    <br>
+    <br>
+
+    <h3 class="Credits">Made by Agent Fuchs</h3>
 
   </body>
 </html>
